@@ -261,8 +261,8 @@ std::function< int (Context&) > getHandler(const string& command)
 		{ "update", &updateReleaseAndIndexData },
 		{ "shell", &shell },
 		{ "source", &downloadSourcePackage },
-		{ "markauto", [](Context& c) -> int { return changeAutoInstalledState(c, true); } },
-		{ "unmarkauto", [](Context& c) -> int { return changeAutoInstalledState(c, false); } },
+		{ "markauto", [](Context& c) -> int { return managePackages(c, ManagePackages::Markauto); } },
+		{ "unmarkauto", [](Context& c) -> int { return managePackages(c, ManagePackages::Unmarkauto); } },
 		{ "showauto", &showAutoInstalled },
 		{ "clean", [](Context& c) -> int { return cleanArchives(c, false); } },
 		{ "autoclean", [](Context& c) -> int { return cleanArchives(c, true); } },
