@@ -5,6 +5,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - The option 'cupt::resolver::track-reasons' does not correspond to the
         console '--show-reasons' option anymore.
       - New positional action override options '--markauto', '--unmarkauto'.
+      - 'markauto', 'unmarkauto': are now first-class management commands.
   * lib:
     - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
     - [API break] '__': now returns 'const char*' instead of 'string'.
